Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>LGDIS</h1>
-        <p>Local Govenment Disaster Information System.</p>
+        <p>Local Government Disaster Information System.</p>
 
         <p class="view"><a href="https://github.com/LGDIS/LGDIS">View the Project on GitHub <small>LGDIS/LGDIS</small></a></p>
 
