Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
 <p>LGDIS (Local Government Disaster Information System) は、地方自治体が災害時において発生する情報を一元的に収集・精査し、住民が必要としている情報を多様なメディア・媒体を通して一括配信する機能を有したトラブルチケットシステムです。</p>
 
+<h3>ライセンス</h3>
+
+<p>LGDIS は <a href="http://www.gnu.org/licenses/agpl-3.0.html">GNU AFFERO GENERAL PUBLIC LICENSE Version 3</a> の下に配布されます。</p>
+
 <h3>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
