Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <h3>ライセンス</h3>
 
-<p>LGDIS は <a href="http://www.gnu.org/licenses/gpl-2.0.html">GNU GENERAL PUBLIC LICENSE Version 2</a> の下に配布されます。</p>
+<p>LGDIS は <a href="http://www.gnu.org/licenses/agpl-3.0.html">GNU AFFERO GENERAL PUBLIC LICENSE Version 3</a> の下に配布されます。</p>
 
 <h3>Welcome to GitHub Pages.</h3>
 
