--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       <section>
         <h3>LGDIS とは</h3>
 
-<p>LGDIS (Local Government Disaster Information System) は、地方自治体が災害時において発生する情報を一元的に収集・精査し、住民が必要としている情報を多様なメディア・媒体を通して一括配信する機能を有したトラブルチケットシステムです。</p>
+<p>LGDIS (Local Government Disaster Information System) は、地方自治体が災害時において発生する情報を一元的に収集・精査し、住民が必要としている情報を多様なメディア・媒体を通して一括配信する機能を有したトラブルチケットシステムです。基本となるアプリケーションに <a href="http://www.redmine.org/">Redmine</a> を採用しています。</p>
 
 <h3>ライセンス</h3>
 
-<p>LGDIS は <a href="http://www.gnu.org/licenses/agpl-3.0.html">GNU AFFERO GENERAL PUBLIC LICENSE Version 3</a> の下に配布されます。</p>
+<p>LGDIS は Redmine のライセンスに基づき <a href="http://www.gnu.org/licenses/gpl-2.0.html">GNU GENERAL PUBLIC LICENSE Version 2</a> の下に配布されます。</p>
 
 <h3>Welcome to GitHub Pages.</h3>
 
