--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
 <p>LGDIS は Redmine のライセンスに基づき <a href="http://www.gnu.org/licenses/gpl-2.0.html">GNU GENERAL PUBLIC LICENSE Version 2</a> の下に配布されます。</p>
 
+<h3>本プログラム配布の背景</h3>
+
+<p>宮城県石巻市が事業主体となり総務省「平成２３年度情報通信技術利活用事業費補助金」に採択された「災害に強い情報連携システム構築事業」の成果の一部であり、他の地方自治体の活用を念頭に広く公開・配布するものです。</p>
+
 <h3>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
