--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <h3>本プログラム配布の背景</h3>
 
-<p>宮城県石巻市が事業主体となり総務省「平成２３年度情報通信技術利活用事業費補助金」に採択された「災害に強い情報連携システム構築事業」の成果の一部であり、他の地方自治体の活用を念頭に広く公開・配布するものです。</p>
+<p>LGDIS は宮城県石巻市が事業主体となり総務省「平成２３年度情報通信技術利活用事業費補助金」に採択された「災害に強い情報連携システム構築事業」における成果の一部であり、他の地方自治体による活用と発展を念頭に広く公開・配布するものです。</p>
 
 <h3>Welcome to GitHub Pages.</h3>
 
