Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,13 +32,21 @@
 
 <p>LGDIS (Local Government Disaster Information System) は、地方自治体が災害時において発生する情報を一元的に収集・精査し、住民が必要としている情報を多様なメディア・媒体を通して一括配信する機能を有したトラブルチケットシステムです。アプリケーションに <a href="http://www.redmine.org/">Redmine</a> ウェブアプリケーションフレームワークに <a href="http://rubyonrails.org/">Ruby on Rails</a> を採用しています。</p>
 
+<h3>本ソフトウェア配布の背景</h3>
+
+<p>LGDIS は宮城県石巻市が事業主体となり総務省「平成２３年度情報通信技術利活用事業費補助金」に採択された「災害に強い情報連携システム構築事業」における成果の一部であり、他の地方自治体による活用と発展を念頭に広く公開・配布するものです。</p>
+
+<h3>著作権者</h3>
+
+<p><a href="http://www.city.ishinomaki.lg.jp/">宮城県石巻市</a></p>
+
 <h3>ライセンス</h3>
 
 <p>LGDIS は Redmine のライセンスに基づき <a href="http://www.gnu.org/licenses/gpl-2.0.html">GNU GENERAL PUBLIC LICENSE Version 2</a> の下に配布されます。</p>
 
-<h3>本プログラム配布の背景</h3>
+<h3>本ソフトウェアの開発元</h3>
 
-<p>LGDIS は宮城県石巻市が事業主体となり総務省「平成２３年度情報通信技術利活用事業費補助金」に採択された「災害に強い情報連携システム構築事業」における成果の一部であり、他の地方自治体による活用と発展を念頭に広く公開・配布するものです。</p>
+<p><a href="http://www.ntt.com/">NTT コミュニケーションズ</a><br><a href="http://www.nttpc.com/">NTT PC コミュニケーションズ</a></p>
 
 <h3>Welcome to GitHub Pages.</h3>
 
