Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 
 <p><a href="http://www.ntt.com/">NTT コミュニケーションズ</a><br><a href="http://www.nttpc.com/">NTT PC コミュニケーションズ</a></p>
 
+<h3>ソフトウェアの開発に参加するために</h3>
+
+<p>本ソフトウェアの開発に参加してくださる地方自治体・法人・個人を募っています。開発は <a href="https://github.com/">GitHub</a> にある Git レポジトリを中心に行っています。<a href="https://github.com/">GitHub</a> のログインアカウントを取得していただければ成果を push することができます。</p>
+
 <h3>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
