Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <h3>ソフトウェアの開発に参加するために</h3>
 
-<p>本ソフトウェアの開発に参加してくださる地方自治体・法人・個人を募っています。開発は <a href="https://github.com/">GitHub</a> にある Git レポジトリを中心に行っています。<a href="https://github.com/">GitHub</a> のログインアカウントを取得していただければ成果を push することができます。</p>
+<p>本ソフトウェアの開発に参加してくださる地方自治体・法人・個人を募っています。開発は <a href="https://github.com/">GitHub</a> にある Git レポジトリを中心に行っています。<a href="https://github.com/">GitHub</a> のログインアカウントを取得の上、<a href="http://www.city.ishinomaki.lg.jp/">宮城県石巻市</a>までご連絡ください。</p>
 
 <h3>Welcome to GitHub Pages.</h3>
 
