Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <h3>ライセンス</h3>
 
-<p>LGDIS は Redmine のライセンスに基づき <a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt">GNU GENERAL PUBLIC LICENSE Version 2</a> 下に配布されます。参考までに<a href="http://www.opensource.jp/gpl/gpl.ja.html">日本語訳</a>がありますので、利用・構築・改変・改造等を開始する前に一度ご確認をお願いします。また、オープンソースソフトウェアのライセンスに関する詳しい情報は、独立行政法人情報処理推進機構の「<a href="http://ossipedia.ipa.go.jp/legalinfo/index.html">OSSライセンス関連情報</a>」をご覧ください。</p>
+<p>LGDIS は Redmine のライセンスに基づき <a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt">GNU GENERAL PUBLIC LICENSE Version 2</a> 下に配布されます。参考までに<a href="http://www.opensource.jp/gpl/gpl.ja.txt">日本語訳</a> がありますので、利用・構築・改変・改造等を開始する前に一度ご確認をお願いします。また、オープンソースソフトウェアのライセンスに関する詳しい情報は、独立行政法人情報処理推進機構の「<a href="http://ossipedia.ipa.go.jp/legalinfo/index.html">OSSライセンス関連情報</a>」をご覧ください。</p>
 
 <h3>本ソフトウェアの開発元</h3>
 
