create "manual files"

--- a/public/manual/manual.html
+++ b/public/manual/manual.html
@@ -1,10 +1,101 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="content-language" content="ja" />
-    <title> マニュアルファイルリンクページ </title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Script-Type" content="text/javascript" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
+    <meta name="Description" content="" />
+    <meta name="Keywords" content="" />
+    <meta name="slurp" content="NOYDIR" />
+    <link rel="stylesheet" href="css/import.css" />
+    <title>石巻市災害に強い情報連携システム　クイックマニュアル一覧</title>
   </head>
-  <body>
-<h1>マニュアル一覧<h1>
-  </body>
-</html> 
+  <body id="manual">
+    <div class="visual">
+      <div class="visual_wrapper">
+      <div class="v_content clearfix">
+          <div class="v_content_left">
+            <h1>
+              クイックマニュアルページ
+            </h1>
+            <div class="vl_content">
+              <h2>項目一覧</h2>              
+              <ul class="index_list">
+                <li>災害情報管理機能（<a target="blank" href="pdf/lgdis.pdf" title="災害情報管理機能pdfマニュアル">pdfマニュアル</a>）
+                  <ul>
+                    <li>
+                      <a href="lgdis1.html" title="チケットを登録する">チケットを登録する</a>
+                    </li>
+                    <li>
+                      <a href="lgdis2.html" title="配信要求をする">配信要求をする</a>
+                    </li>                    
+                    <li>
+                      <a href="lgdis3.html" title="配信要求を承認する">配信要求を承認する</a>
+                    </li>
+                    <li>
+                      <a href="lgdis4.html" title="消防庁４号様式を登録する">消防庁４号様式を登録する</a>
+                    </li>
+                    <li>
+                      <a href="lgdis5.html" title="避難所の開設状況を管理する">避難所の開設状況を管理する</a>
+                    </li>
+                    <li>
+                      <a href="lgdis6.html" title="避難勧告・指示情報を管理する">避難勧告・指示情報を管理する</a>
+                    </li>
+                  </ul>
+                </li>
+                <li>PersonFinder機能（<a target="blank" href="pdf/lgdpf.pdf" title="PersonFinder機能pdfマニュアル">pdfマニュアル</a>）
+                  <ul>
+                    <li>
+                      <a href="lgdpf1.html" title="安否情報を提供する">安否情報を提供する</a>
+                    </li>
+                    <li>
+                      <a href="lgdpf2.html" title="人を探している">人を探している</a>
+                    </li>                    
+                  </ul>
+                </li>
+                <li>PersonManger機能（<a target="blank" href="pdf/lgdpm.pdf" title="PersonMangaer機能pdfマニュアル">pdfマニュアル</a>）
+                  <ul>
+                    <li>
+                      <a href="lgdpm1.html" title="避難者情報を登録する">避難者情報を登録する</a>
+                    </li>
+                    <li>
+                      <a href="lgdpm2.html" title="避難者名簿を印刷する">避難者名簿を印刷する</a>
+                    </li>                    
+                    <li>
+                      <a href="lgpdm3.html" title="PersonFinder情報連携する">PersonFinderと情報連携する</a>
+                    </li>
+                    <li>
+                      <a href="lgdpm4.html" title="災害情報管理機能に情報を出力する">災害情報管理機能に情報を出力する</a>
+                    </li>
+                  </ul>
+                </li>
+                <li>StaffFinder機能（<a target="blank" href="pdf/lgdsf.pdf" title="StaffFinder機能pdfマニュアル">pdfマニュアル</a>）
+                  <ul>
+                    <li>
+                      <a href="lgdsf1.html" title="職員の参集予定状況を確認する">職員の参集予定状況を確認する</a>
+                    </li>
+                    <li>
+                      <a href="lgdsf2.html" title="参集場所を報告する">参集場所を報告する</a>
+                    </li>
+                  </ul>
+                </li>
+                <li>災害情報ポータル機能（<a target="blank" href="pdf/portal.pdf" title="災害情報ポータルpdfマニュアル">pdfマニュアル</a>）
+                  <ul>
+                    <li>
+                      <a href="portal1.html" title="お知らせ情報を変更する">お知らせ情報を変更する</a>
+                    </li>
+                    <li>
+                      <a href="portal2.html" title="マーキー(サイネージ)情報を変更する">マーキー(サイネージ)情報を変更する</a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </div> <!-- vl_content end -->
+          </div> <!-- v_content_left -->
+          <script type="text/javascript" src="./js/menu.js" charset="UTF-8"></script>
+        </div> <!-- visual_content end -->
+      </div> <!-- visual_wrapper end -->
+    </div> <!-- visual end -->
+    	<div class="clearfix"></div>
+</body>
+</html>
