update manual files (public/manual/*)

--- a/public/manual/lgdsf2.html
+++ b/public/manual/lgdsf2.html
@@ -24,7 +24,9 @@
               </div>
 <img src = "img/lgdsf2-1.png">
               <div class="info-box">
-                「現在位置を送信」をクリックします。
+                「現在位置を送信」をクリックします。<br>
+                <b>※現在位置を送信画面(本ページのURL)をブックマークしてください。初回のアクセス以降は、召集メールが届いた場合、ブックマークから本ページを選択することにより、「(1)　メールアドレス入力」の処理を省略することができます。</b>
+
               </div>
 <img src = "img/lgdsf2-2.png">
               <div class="info-box">
