--- a/public/manual/manual.html
+++ b/public/manual/manual.html
@@ -62,7 +62,7 @@
                       <a href="lgdpm2.html" title="避難者名簿を印刷する">避難者名簿を印刷する</a>
                     </li>                    
                     <li>
-                      <a href="lgpdm3.html" title="PersonFinder情報連携する">PersonFinderと情報連携する</a>
+                      <a href="lgdpm3.html" title="PersonFinder情報連携する">PersonFinderと情報連携する</a>
                     </li>
                     <li>
                       <a href="lgdpm4.html" title="災害情報管理機能に情報を出力する">災害情報管理機能に情報を出力する</a>
