--- a/public/manual/lgdis1.html
+++ b/public/manual/lgdis1.html
@@ -20,8 +20,8 @@
             </h1>
             <div class="vl_content">
               <div class="info-box">
-                ・ログインし、「新規情報登録」タブメニューをクリックします。<br>
-                ・登録したい情報に適合する①「トラッカー」を選択し、②必要な情報を入力して、③「配信画面へ」または「登録」をクリックします。
+                ・ログインし、タブメニュー「新規情報登録」をクリックします。<br>
+                ・登録したい情報に適合する①「トラッカー」を選択し、②必要な情報を入力して、③「配信画面へ」ボタンまたは「登録」ボタンをクリックします。チケットを連続して登録する場合は、「登録」ボタンをクリックします。
               </div>
 <img src = "img/lgdis1-1.png">
             </div> <!-- vl_content end -->
