--- a/public/manual/lgdis2.html
+++ b/public/manual/lgdis2.html
@@ -20,11 +20,11 @@
             </h1>
             <div class="vl_content">
               <div class="info-box">
-                新規情報登録し、①「配信画面へ」をクリックします。
+                新規情報登録し、①「配信画面へ」ボタンをクリックします。
               </div>
 <img src = "img/lgdis2-1.png">
               <div class="info-box">
-                配信要求画面にて、①配信先を選択し、②配信内容を入力します。その後、③「配信要求」ボタンをクリックすることで、配信要求を行います。配信要求を行った内容は、④「配信状況」で、内容の確認、配信要求の取消を行うことができます。
+                配信要求画面にて、①配信先を選択し、②配信内容を入力します。その後、③「配信要求」ボタンをクリックすることにより、配信要求を行います。配信要求を行った内容は、④「配信状況」で、内容の確認、配信要求の取消を行うことができます。
               </div>
 <img src = "img/lgdis2-2.png">
             </div> <!-- vl_content end -->
