--- a/public/manual/lgdis3.html
+++ b/public/manual/lgdis3.html
@@ -20,8 +20,8 @@
             </h1>
             <div class="vl_content">
               <div class="info-box">
-                ログインし、「配信管理」タブメニューをクリックします。<br>
-                配信一覧画面より、「ステータス」より、「配信要求中」の「チケット番号」をクリックします。<br>
+                ログインし、タブメニュー「配信管理」をクリックします。<br>
+                「ステータス」が「配信要求中」の「チケット番号」をクリックします。<br>
                 ・配信要求中：承認待ちの情報です。承認処理を行う必要があります。<br>
                 ・配信予定　：承認が完了し、配信待ちの情報です。配信前であれば、配信取消を行うことができます。<br>
                 ・配信取消　：配信要求後に、配信要求者により配信要求が取り消された、または、配信管理者により却下処理がされた情報です。<br>
@@ -30,7 +30,7 @@
               </div>
 <img src = "img/lgdis3-1.png">
               <div class="info-box">
-                配信要求のチケット詳細画面が表示され、①「コマンド」に表示されている「配信確認」をクリックします。
+                配信要求中のチケット詳細画面が表示され、①「コマンド」に表示されている「配信確認」をクリックします。
               </div>
 <img src = "img/lgdis3-2.png">
               <div class="info-box">
