--- a/public/manual/lgdis4.html
+++ b/public/manual/lgdis4.html
@@ -20,8 +20,8 @@
             </h1>
             <div class="vl_content">
               <div class="info-box">
-                ログインして、「第４号様式」タブメニューをクリックします。<br>
-                ①に必要となる情報を入力します。情報入力後、チケット登録先のトラッカー(【システム】災害対策本部設置・【システム】被害要約（概況）・【システム】被害要約（状況）)を選択し、「登録」ボタンをクリックすることで、①で入力した情報を保存、チケット登録します。
+                ログインして、タブメニュー「第４号様式」をクリックします。<br>
+                ①に必要となる情報を入力します。情報入力後、チケット登録先のトラッカー(【システム】災害対策本部設置・【システム】被害要約（概況）・【システム】被害要約（状況）)を②で選択し、③「登録」ボタンをクリックするにより、①で入力した情報が、②で選択したトラッカーのチケットに登録されます。
               </div>
 <img src = "img/lgdis4-1.png">
             </div> <!-- vl_content end -->
