--- a/public/manual/lgdis5.html
+++ b/public/manual/lgdis5.html
@@ -20,15 +20,15 @@
             </h1>
             <div class="vl_content">
               <div class="info-box">
-                ログインし、「避難所一覧」タブメニューをクリックします。<br />
+                ログインし、タブメニュー「避難所一覧」をクリックします。<br />
                 避難所一覧が表示され、①「避難所名」をクリックすることにより、詳細情報が表示されます。<br />
-                新規登録する場合には、②「新規避難所」をクリックします。<br />
-                また、③「更新」をクリックすることにより、「開設状況」・「開設日時」・「閉鎖日時」の情報が更新されます。④「登録」をクリックすることにより、現在の避難勧告・指示情報が「【システム】避難所開設・閉鎖」トラッカーに新規にチケットが登録されます。<br />
-                なお、④「登録」ボタンをクリックする前に、必ず③「更新ボタン」を必ずクリックし、情報の更新を実施してください。選択肢の変更、情報の入力だけでは、情報の更新がされません。
+                新規登録する場合には、②「新規避難所」ボタンをクリックします。<br />
+                また、③「更新」ボタンをクリックすることにより、「開設状況」・「開設日時」・「閉鎖日時」の情報が更新されます。④「登録」ボタンをクリックすることにより、現在の避難所情報が「【システム】避難所開設・閉鎖」トラッカーに新規にチケットが登録されます。<br />
+                なお、④「登録」ボタンをクリックする前に、必ず③「更新」ボタンを必ずクリックし、情報の更新を実施してください。選択肢の変更、情報の入力だけでは、変更した情報が反映されません。
               </div>
 <img src = "img/lgdis5-1.png">
               <div class="info-box">
-                避難所を登録する場合には、①必要な情報を入力後、②「保存」をクリックすることにより、入力した情報で、新規登録・情報の更新を行います。
+                避難所を登録する場合には、①必要な情報を入力後、②「保存」ボタンをクリックすることにより、入力した情報で、新規登録・情報の更新を行います。
               </div>
 <img src = "img/lgdis5-2.png">
             </div> <!-- vl_content end -->
