--- a/public/manual/lgdpf1.html
+++ b/public/manual/lgdpf1.html
@@ -25,7 +25,7 @@
 <img src = "img/lgdpf1-1.png">
               <div class="info-box">
                 安否情報を提供する対象の姓名を入力後、「この人に関する情報を提供する」ボタンをクリックすることにより、対象者の登録状況が表示されます。既に情報登録されている場合は、一覧に表示されます。一覧に表示が無い場合は、「次の人の新しいレコードを作成する」ボタンをクリックし、情報を登録します。
-                重複データとして管理する場合は、「重複マークモードに切り替える」リンクをクリックし、重複情報として管理処理を行います。
+                重複データとして管理する場合は、「重複マークモードに切り替える」をクリックし、重複情報として管理処理を行います。
               </div>
 <img src = "img/lgdpf1-3.png">
               <div class="info-box">
