--- a/public/manual/lgdpf2.html
+++ b/public/manual/lgdpf2.html
@@ -24,7 +24,7 @@
               </div>
 <img src = "img/lgdpf2-1.png">
               <div class="info-box">
-                探している人の名字、名前、その一部を入力後、「この人を探す」をクリックすることにより、検索結果が表示されます。検索結果に情報が表示されない場合は、「行方不明者の新しい記録を作成する」ボタンをクリックし、情報を登録します。
+                探している人の名字、名前、その一部を入力後、「この人を探す」ボタンをクリックすることにより、検索結果が表示されます。検索結果に情報が表示されない場合は、「行方不明者の新しい記録を作成する」ボタンをクリックし、情報を登録します。
               </div>
 <img src = "img/lgdpf2-2.png">
               <div class="info-box">
