--- a/public/manual/lgdpm1.html
+++ b/public/manual/lgdpm1.html
@@ -24,10 +24,10 @@
                 ①  「氏名」を入力します。（漢字、ひらがな、カナ、英数字でも入力可能、最大500文字）<br>
                 （入力必須項目）<br>
                 ②  「氏名カナ」を入力します。（入力例：サイガイ、タロウ）<br>
-                ③  「生年月日」を入力します。（入力例：西暦入力：1965/3/16）<br>
+                ③  「生年月日」を入力します。（入力例：西暦を半角で入力：1965/3/16）<br>
                 ④  「性別」を選択します。<br>
                 ⑤  「郵便番号」を入力します。（入力例：1030051、103-0051どちらでも入力可能）<br>
-                ⑥  「年齢」を入力します。<br>
+                ⑥  「年齢」を入力します。（入力例：05、5　どちらでも入力可能）<br>
                 ⑦  「都道府県」：選択します。<br>
                 ⑧  「市区町村」を入力します。<br>
                 ⑨  「町名」を入力します。（石巻市のみ補助入力します）<br>
@@ -36,9 +36,9 @@
                 ⑫  「避難状況」を選択します。<br>
                 ⑬  「避難理由」を入力します。<br>
                 ⑭  「入所年月日」を入力します。避難所に避難した日時を入力します。<br>
-                （入力例：西暦入力：2011/3/15）<br>
-                ⑮  「退所年月日」を入力します。避難所から退所した日時を入力します。<br>
-                （入力例：西暦入力：2011/3/15）<br>
+                （入力例：西暦を半角で入力：2011/3/15）<br>
+                ⑮  「退所年月日」を半角で入力します。避難所から退所した日時を入力します。<br>
+                （入力例：西暦半角で入力：2011/3/15）<br>
                 ⑯  「退所先」を入力します。（入力例：自宅、仮設住宅）<br>
                 ⑰  「退所先電話番号」を入力します。（入力例：044-231-0501）<br>
                 ⑱  「負傷内容」を入力します。けが、負傷の状況を入力します。<br>
