--- a/public/manual/lgdpm2.html
+++ b/public/manual/lgdpm2.html
@@ -20,7 +20,7 @@
             </h1>
             <div class="vl_content">
               <div class="info-box">
-                ログインして、①「避難者名簿印刷」をクリックすることにより、避難所毎の避難者名簿ファイル(zip形式の圧縮ファイル)をダウンロードします。<br>
+                ログインして、①「避難者名簿印刷」ボタンをクリックすることにより、避難所毎の避難者名簿ファイル(zip形式の圧縮ファイル)をダウンロードします。<br>
               </div>
 <img src = "img/lgdpm2-1.png">
             </div> <!-- vl_content end -->
