--- a/public/manual/lgdpm3.html
+++ b/public/manual/lgdpm3.html
@@ -20,8 +20,8 @@
             </h1>
             <div class="vl_content">
               <div class="info-box">
-                ログインして、①「石巻PFから取込み」をクリックすることにより、石巻PersonFinderから、避難者情報を取込み、自動的に住基マッチングをして表示します。<br>
-                また、②「石巻PFへ出力」をクリックすることにより、石巻PersonFinderへ情報公開（情報公開してよいとされた方のみ）します。
+                ログインして、①「石巻PFから取込み」ボタンをクリックすることにより、石巻PersonFinderから、避難者情報を取込み、自動的に住基マッチングをして表示します。<br>
+                また、②「石巻PFへ出力」ボタンをクリックすることにより、石巻PersonFinderへ情報公開（情報公開してよいとされた方のみ）します。
               </div>
 <img src = "img/lgdpm3-1.png">
             </div> <!-- vl_content end -->
