--- a/public/manual/lgdpm4.html
+++ b/public/manual/lgdpm4.html
@@ -20,7 +20,7 @@
             </h1>
             <div class="vl_content">
               <div class="info-box">
-                ログインして、①「避難所一覧に出力」をクリックすることにより災害情報管理機能へ避難者情報が出力されます。
+                ログインして、①「避難所一覧に出力」ボタンをクリックすることにより災害情報管理機能へ避難者情報が出力されます。
               </div>
 <img src = "img/lgdpm4-1.png">
             </div> <!-- vl_content end -->
