--- a/public/manual/lgdsf1.html
+++ b/public/manual/lgdsf1.html
@@ -20,8 +20,8 @@
             </h1>
             <div class="vl_content">
               <div class="info-box">
-                ①	「参集場所」タブメニューをクリックすることにより、参集場所がマップに表示されます。<br>
-                ②  「部署」タブメニューをクリックすることにより、部署毎にマップ表示されます。<br>
+                ①	タブメニュー「参集場所」をクリックすることにより、参集場所がマップに表示されます。<br>
+                ②  タブメニュー「部署」をクリックすることにより、部署毎にマップ表示されます。<br>
                 ③  参集出来ない、または参集不明者を表示します。<br>
                 ・「肩代わり報告」：代行して参集出来ないことを報告します。<br>
                 ・「現在位置不明」：位置情報が不明であることを表示します。<br>
