--- a/public/manual/lgdsf2.html
+++ b/public/manual/lgdsf2.html
@@ -24,17 +24,17 @@
               </div>
 <img src = "img/lgdsf2-1.png">
               <div class="info-box">
-                「現在位置を送信」をクリックします。<br>
-                <b>※現在位置を送信画面(本ページのURL)をブックマークしてください。初回のアクセス以降は、召集メールが届いた場合、ブックマークから本ページを選択することにより、「(1)　メールアドレス入力」の処理を省略することができます。</b>
+                「現在位置を送信」ボタンをクリックします。<br>
+                <b>※現在位置を送信画面(本ページのURL)をブックマークしてください。初回のアクセス以降は、招集メールが届いた場合、ブックマークから本ページを選択することにより、「(1)　メールアドレス入力」の処理を省略することができます。</b>
 
               </div>
 <img src = "img/lgdsf2-2.png">
               <div class="info-box">
-                ①「参集場所」を選択して、②「送信」をクリックします。<br>
+                ①「参集場所」を選択して、②「送信」ボタンをクリックします。<br>
                 ・「所定の参集場所」：予め決まっている、参集場所を選択します。<br>
                 ・「近くの参集場所」：現在の位置から、近くの参集場所を自動的に表示します。<br>
                 なお、フィーチャーフォンは、３箇所を表示、スマートフォン/タブレットは、８箇所表示します。<br>
-                もし、参集場所へ向かえない場合は、③チェックボックスをクリックし、理由を入力して、②「送信」をクリックします。
+                もし、参集場所へ向かえない場合は、③チェックボックスをクリックし、理由を入力して、②「送信」ボタンをクリックします。
               </div>
 <img src = "img/lgdsf2-3.png">
             </div> <!-- vl_content end -->
