--- a/public/manual/manual.html
+++ b/public/manual/manual.html
@@ -21,7 +21,7 @@
             <div class="vl_content">
               <h2>項目一覧</h2>              
               <ul class="index_list">
-                <li>災害情報管理機能（<a target="blank" href="pdf/lgdis.pdf" title="災害情報管理機能pdfマニュアル">pdfマニュアル</a>）
+                <li>災害情報管理機能（<a href="pdf.html" title="詳細版マニュアル">詳細版マニュアル</a>）
                   <ul>
                     <li>
                       <a href="lgdis1.html" title="チケットを登録する">チケットを登録する</a>
@@ -43,7 +43,7 @@
                     </li>
                   </ul>
                 </li>
-                <li>PersonFinder機能（<a target="blank" href="pdf/lgdpf.pdf" title="PersonFinder機能pdfマニュアル">pdfマニュアル</a>）
+                <li>PersonFinder機能（<a href="pdf.html" title="詳細版マニュアル">詳細版マニュアル</a></a>）
                   <ul>
                     <li>
                       <a href="lgdpf1.html" title="安否情報を提供する">安否情報を提供する</a>
@@ -53,7 +53,7 @@
                     </li>                    
                   </ul>
                 </li>
-                <li>PersonManger機能（<a target="blank" href="pdf/lgdpm.pdf" title="PersonMangaer機能pdfマニュアル">pdfマニュアル</a>）
+                <li>PersonManger機能（<a href="pdf.html" title="詳細版マニュアル">詳細版マニュアル</a>）
                   <ul>
                     <li>
                       <a href="lgdpm1.html" title="避難者情報を登録する">避難者情報を登録する</a>
@@ -69,7 +69,7 @@
                     </li>
                   </ul>
                 </li>
-                <li>StaffFinder機能（<a target="blank" href="pdf/lgdsf.pdf" title="StaffFinder機能pdfマニュアル">pdfマニュアル</a>）
+                <li>StaffFinder機能（<a href="pdf.html" title="詳細版マニュアル">詳細版マニュアル</a>）
                   <ul>
                     <li>
                       <a href="lgdsf1.html" title="職員の参集予定状況を確認する">職員の参集予定状況を確認する</a>
@@ -79,7 +79,7 @@
                     </li>
                   </ul>
                 </li>
-                <li>災害情報ポータル機能（<a target="blank" href="pdf/portal.pdf" title="災害情報ポータルpdfマニュアル">pdfマニュアル</a>）
+                <li>災害情報ポータル機能（<a href="pdf.html" title="詳細版マニュアル">詳細版マニュアル</a>）
                   <ul>
                     <li>
                       <a href="portal1.html" title="お知らせ情報を変更する">お知らせ情報を変更する</a>
