--- a/public/manual/portal1.html
+++ b/public/manual/portal1.html
@@ -20,15 +20,15 @@
             </h1>
             <div class="vl_content">
               <div class="info-box">
-                災害情報ポータル管理画面へログインします。管理画面へのURLは、<a href="#" title="ポータル管理画面">こちら</a>になります。
+                災害情報ポータル管理画面へログインします。
               </div>
 <img src = "img/portal1-1.png">
               <div class="info-box">
-                ①「お知らせ」タブメニュー→②「お知らせの新規追加」をクリックします。               
+                ①タブメニュー「お知らせ」→②「お知らせの新規追加」をクリックします。               
               </div>
 <img src = "img/portal1-2.png">
               <div class="info-box">
-                「タイトル」、「公開日」、「公開期限」、「本文」を設定して、「保存」をクリックします。              
+                「タイトル」、「公開日」、「公開期限」、「本文」を設定して、「保存」ボタンをクリックします。              
               </div>
 <img src = "img/portal1-3.png">
             </div> <!-- vl_content end -->
