--- a/public/manual/lgdpm1.html
+++ b/public/manual/lgdpm1.html
@@ -20,7 +20,7 @@
             </h1>
             <div class="vl_content">
               <div class="info-box">
-                ログインして、「新規登録」タブメニューをクリックして、①～㉛までを入力します。<br>
+                ログインして、タブメニュー「新規登録」をクリックして、①～㉛までを入力します。<br>
                 ①  「氏名」を入力します。（漢字、ひらがな、カナ、英数字でも入力可能、最大500文字）<br>
                 （入力必須項目）<br>
                 ②  「氏名カナ」を入力します。（入力例：サイガイ、タロウ）<br>
