--- a/public/manual/pdf.html
+++ b/public/manual/pdf.html
@@ -60,7 +60,7 @@
                 <li>StaffFinder機能
                   <ul>
                     <li>
-                      <a target="blank" href="pdf/lgdpf1.pdf" title="石巻StaffFinder操作マニュアル（システム管理者編）">石巻StaffFinder操作マニュアル（システム管理者編）</a>
+                      <a target="blank" href="pdf/lgdsf1.pdf" title="石巻StaffFinder操作マニュアル（システム管理者編）">石巻StaffFinder操作マニュアル（システム管理者編）</a>
                     </li>
                   </ul>
                 </li>
